k8s/tezos-public-node-base/tezos-remote-signer-forwarder.yaml
apiVersion: v1
kind: Service
metadata:
  name: tezos-remote-signer-forwarding-ingress
spec:
  type: LoadBalancer
  ports:
  - port: 58255
    targetPort: 58255
    name: ssh-forwarding-ingress
  selector:
    app: tezos-remote-signer-forwarder
---
apiVersion: v1
kind: Service
metadata:
  name: tezos-remote-signer-forwarder
spec:
  ports:
  - port: 18443
    name: remote-signer-a
  - port: 18444
    name: remote-signer-b
  selector:
    app: tezos-remote-signer-forwarder
  clusterIP: None
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: tezos-remote-signer-forwarder-policy
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: tezos-remote-signer-forwarder
  policyTypes:
  - Ingress
  ingress:
  - ports:
    - port: 58255
      protocol: TCP
  - ports:
    - port: 18443
      protocol: TCP
    - port: 18444
      protocol: TCP
    from:
    - podSelector:
        matchLabels:
          app: tezos-remote-signer-loadbalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tezos-remote-signer-forwarder
spec:
  selector:
    matchLabels:
      app: tezos-remote-signer-forwarder
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: tezos-remote-signer-forwarder
    spec:
      securityContext:
        fsGroup: 100
      containers:
      - name: tezos-remote-signer-forwarder
        image: tezos-remote-signer-forwarder
        ports:
        - containerPort: 58255
          name: ssh
        - containerPort: 18443
          name: signer-a
        - containerPort: 18444
          name: signer-b
        resources:
          limits:
            cpu: 0
        imagePullPolicy: Always
